fix: spacing and size in filter footer

--- a/src/utils/settings.scss
+++ b/src/utils/settings.scss
@@ -140,7 +140,7 @@ $app-sidebar-link-color: mix($app-sidebar-bg, $app-sidebar-color, 40%);
 
 $app-context-sidebar-bg: mix(#fff, $app-sidebar-bg, 5%);
 $app-context-sidebar-color: #fff;
-$app-context-sidebar-width: 360px;
+$app-context-sidebar-width: 380px;
 
 $search-results-list-width: 600px;
 
